--- a/webClient/index.html
+++ b/webClient/index.html
@@ -62,7 +62,8 @@
         }
 
     </style>
-    <script src="../js/jquery-2.1.1.js"></script>
+    <!--<script src="../js/jquery-2.1.1.js"></script>-->
+    <script src="js/jquery-3.2.1.min.js"></script>
 </head>
 <body>
     <div class="container">
