--- a/webClient/login.html
+++ b/webClient/login.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>login</title>
-    <script src="../js/jquery-2.1.1.js"></script>
+    <!--<script src="../js/jquery-2.1.1.js"></script>-->
+    <script src="js/jquery-3.2.1.min.js"></script>
 </head>
 <body>
 <form action="#">
