--- a/webClientTest/login.html
+++ b/webClientTest/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Login</title>
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/login.js"></script>
 </head>
@@ -25,9 +25,6 @@
 <script>
     $(function (){
         var login = new Login();
-//        login.$document.on('click', '#btn-login', function () {
-//            login.btnLoginClick();
-//        });
     });
 
 </script>
