--- a/webClientTest/login.html
+++ b/webClientTest/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/login.js"></script>
 </head>
 <body>
