--- a/webClientTest/register.html
+++ b/webClientTest/register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Register</title>
     <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/register.js"></script>
 </head>
 <body>
@@ -26,7 +27,6 @@
 <script>
     $(function () {
         let register = new Register();
-        console.log('register');
     });
 </script>
 </html>
