--- a/webClientTest/login.html
+++ b/webClientTest/login.html
@@ -7,6 +7,7 @@
     <script src="js/main.js"></script>
     <script src="js/login.js"></script>
     <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <div class="box-first">
