--- a/webClientTest/login.html
+++ b/webClientTest/login.html
@@ -15,6 +15,8 @@
         <div class="box">
             <form action="#">
                 <input type="text" class="box-text font-size-20" id="txt-phone" placeholder="电话号码*">
+                <!-- 额外增加的input -->
+                <input type="password" style="width:0;height:0;float:left;visibility:hidden"/>
                 <p id="p-phone-error" class="error"></p>
                 <input type="password" class="box-text font-size-20" id="pwd-password" placeholder="密码*">
                 <p id="p-password-error" class="error"></p>
