--- a/webClientTest/index.html
+++ b/webClientTest/index.html
@@ -7,22 +7,29 @@
     <script src="js/main.js"></script>
     <script src="js/Index.js"></script>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <div class="container">
-    <nav>
-        <input type="search" id="sch-search">
-        <button id="btn-search">serarch</button>
-    </nav>
-    <section class="type">
-        <div class="div-type">
-            <div class="book-type">书籍分类</div>
-            <div class="type-value" id="div-type-value">
-                <ul>
-                </ul>
+    <div>
+        <nav>
+            <input type="search" id="sch-search">
+            <button id="btn-search">serarch</button>
+        </nav>
+        <section class="type">
+            <div class="div-type">
+                <div class="book-type">书籍分类</div>
+                <div class="type-value" id="div-type-value">
+                    <ul>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
+    <div>
+        <a href="javascript:;" class="a-text-decoration"><span>价格排序</span></a>
+        <a href="javascript:;" class="a-text-decoration"><span>销量排序</span></a>
+    </div>
 </div>
 </body>
 <script>
