--- a/webClientTest/index.html
+++ b/webClientTest/index.html
@@ -10,27 +10,73 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<div class="container">
-    <div>
-        <nav>
-            <input type="search" id="sch-search">
-            <button id="btn-search">serarch</button>
-        </nav>
-        <section class="type">
-            <div class="div-type">
-                <div class="book-type">书籍分类</div>
-                <div class="type-value" id="div-type-value">
-                    <ul>
-                    </ul>
-                </div>
-            </div>
-        </section>
+
+<div class="box-first-index">
+    <input type="search" id="sch-search">
+    <button id="btn-search" value="搜索">搜索</button>
+</div>
+
+<div class="box-book-type">
+    <div class="div-type">
+        <div class="type-value" id="div-type-value">
+            <ul>
+                <li>书籍分类</li>
+            </ul>
+        </div>
     </div>
-    <div>
+</div>
+
+<div class="box-order">
+    <div class="div-order">
         <a href="javascript:;" class="a-text-decoration"><span>价格排序</span></a>
         <a href="javascript:;" class="a-text-decoration"><span>销量排序</span></a>
     </div>
 </div>
+<hr/>
+<div class="box-book-list">
+
+    <div style="margin-left: 40px;border: 1px solid rgba(19,20,23,0.46);padding: 6px">
+        <img src="image/zzdx.jpg" height="200" width="200"/>
+        <p style="font-size: 20px;">浮生六计</p>
+        <p style="font-size: 15px;">价格:$27.00</p>
+        <p style="font-size: 15px;">已销售:<span style="color: #ff1717;">29,000</span></p>
+        <p style="font-size: 15px;">发行日期:1900-01-01</p>
+        <button> 立即购买</button><button style="margin-left: 5px">加入购物车</button>
+    </div>
+    <div style="margin-left: 40px;border: 1px solid rgba(19,20,23,0.46);padding: 6px">
+        <img src="image/zzdx.jpg" height="200" width="200"/>
+        <p style="font-size: 20px;">浮生六计</p>
+        <p style="font-size: 15px;">价格:$27.00</p>
+        <p style="font-size: 15px;">已销售:<span style="color: #ff1717;">29,000</span></p>
+        <p style="font-size: 15px;">发行日期:1900-01-01</p>
+        <button> 立即购买</button><button style="margin-left: 5px">加入购物车</button>
+    </div>
+    <div style="margin-left: 40px;border: 1px solid rgba(19,20,23,0.46);padding: 6px">
+        <img src="image/zzdx.jpg" height="200" width="200"/>
+        <p style="font-size: 20px;">浮生六计</p>
+        <p style="font-size: 15px;">价格:$27.00</p>
+        <p style="font-size: 15px;">已销售:<span style="color: #ff1717;">29,000</span></p>
+        <p style="font-size: 15px;">发行日期:1900-01-01</p>
+        <button> 立即购买</button><button style="margin-left: 5px">加入购物车</button>
+    </div>
+    <div style="margin-left: 40px;border: 1px solid rgba(19,20,23,0.46);padding: 6px">
+        <img src="image/zzdx.jpg" height="200" width="200"/>
+        <p style="font-size: 20px;">浮生六计</p>
+        <p style="font-size: 15px;">价格:$27.00</p>
+        <p style="font-size: 15px;">已销售:<span style="color: #ff1717;">29,000</span></p>
+        <p style="font-size: 15px;">发行日期:1900-01-01</p>
+        <button> 立即购买</button><button style="margin-left: 5px">加入购物车</button>
+    </div>
+
+</div>
+<div class="div-book-page">
+    <button style="width: 50px;height: 30px;" disabled="disabled">首页</button>
+    <button style="width: 30px;height: 30px;">1</button>
+    <button style="width: 30px;height: 30px;">2</button>
+    <button style="width: 30px;height: 30px;">3</button>
+    <button style="width: 50px;height: 30px;">末页</button>
+</div>
+
 </body>
 <script>
     $(function () {
