--- a/webClientTest/detail.html
+++ b/webClientTest/detail.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Detail</title>
+    <link rel="stylesheet" href="css/detail.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<div>
-    Detail
+<div class="box-detail">
+    <div style="margin-left: 40px;border: 1px solid rgba(19,20,23,0.46);padding: 16px;">
+        <div style="display: inline-block">
+            <img src="image/zzdx.jpg" height="200" width="200"/>
+        </div>
+        <div style="display: inline-block">
+            <span style="font-size: 28px;">浮生六计</span>
+            <p style="font-size: 15px;">价格:$27.00</p>
+            <p style="font-size: 15px;">已销售:<span style="color: #ff1717;">29,000</span></p>
+            <p style="font-size: 15px;">发行日期:1900-01-01</p>
+            <button> 立即购买</button>
+            <button style="margin-left: 5px">加入购物车</button>
+        </div>
+    </div>
+</div>
+<hr/>
+<div class="box-detail-comment">
+    <div>评论:</div>
+    <textarea name="comment" id="txt-comment" cols="50" rows="10"></textarea>
+    <div>
+        <button>提交</button>
+    </div>
+
 </div>
 </body>
 </html>
