Position absolute,relative,static,fixed.

--- a/webClientTest/detail.html
+++ b/webClientTest/detail.html
@@ -26,10 +26,37 @@
 <div class="box-detail-comment">
     <div>评论:</div>
     <textarea name="comment" id="txt-comment" cols="50" rows="10"></textarea>
-    <div>
+    <div style="width: 50px;position: relative;left: 300px">
+    <!--<div >-->
         <button>提交</button>
     </div>
-
+</div>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />asdf
+<br />
+<div style="position: absolute;top:600px;left: 500px;">
+    <pan>Absolute</pan>
+</div>
+<div style="position: fixed;top:600px;left: 600px;">
+    <pan>Absolute</pan>
 </div>
 </body>
 </html>
