--- a/webClientTest/detail.html
+++ b/webClientTest/detail.html
@@ -46,11 +46,11 @@
 <br />
 <br />asdf
 <br />
-<div style="position: absolute;top:600px;left: 500px;">
+<div style="position: absolute;top:600px;left: 500px;z-index: 10">
     <pan>Absolute</pan>
 </div>
 <div style="position: fixed;top:600px;left: 600px;">
-    <pan>Absolute</pan>
+    <pan>Fixed</pan>
 </div>
 </body>
 </html>
