--- a/webClientTest/index.html
+++ b/webClientTest/index.html
@@ -28,8 +28,8 @@
 
 <div class="box-order">
     <div class="div-order">
-        <a href="javascript:;" class="a-text-decoration"><span>价格排序</span></a>
-        <a href="javascript:;" class="a-text-decoration"><span>销量排序</span></a>
+        <a href="javascript:;" class="a-text-decoration" name="orderA" title="price"><span>价格排序</span></a>
+        <a href="javascript:;" class="a-text-decoration" name="orderA" title="sale_count"><span>销量排序</span></a>
     </div>
 </div>
 <hr/>
