--- a/webClientTest/index.html
+++ b/webClientTest/index.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<div class="box-personal" style="display: flex;justify-content: flex-end">
+    <div id="div-login">
+        <a class="a-login" href="login.html"><span id="spn-login">登录</span></a>|<a class="a-login" href="register.html"><span
+            id="spn-register">注册</span></a>
+    </div>
+    <div id="div-logged" class="hidden">
+        <span id="spn-info"></span>|<a class="a-login" href="index.html" id="a-logout"><span id="spn-logout">退出</span></a>
+    </div>
+</div>
 
 <div class="box-first-index">
     <input type="search" id="sch-search">
