--- a/practise/client/login.html
+++ b/practise/client/login.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="js/login.js"></script>
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/main.js"></script>
 </head>
 <body>
-
+Login
 </body>
+<script>
+    $(function () {
+        let login = new Login();
+    });
+</script>
 </html>
