--- a/practise/client/login.html
+++ b/practise/client/login.html
@@ -8,7 +8,16 @@
     <script src="js/main.js"></script>
 </head>
 <body>
-Login
+<div style="display: flex;justify-content: center;align-items: center;height: 500px">
+    <div style="width: 300px">
+        <form action="">
+            <input type="text">
+            <input type="text">
+            <br/>
+            <input type="button" value="登录">
+        </form>
+    </div>
+</div>
 </body>
 <script>
     $(function () {
