--- a/webClientTest/index.html
+++ b/webClientTest/index.html
@@ -20,7 +20,7 @@
     </div>
 </div>
 
-<div class="box-first-index">
+<div class="box-first-index box-first-index-media">
     <input type="search" id="sch-search">
     <button id="btn-search" value="搜索">搜索</button>
 </div>
